--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "author": "ethan-heo",
     "license": "MIT",
     "devDependencies": {
+        "@changesets/changelog-github": "^0.5.0",
+        "@changesets/cli": "^2.27.11",
         "@types/node": "^22.10.7",
-        "changeset": "^0.2.6",
         "typescript": "^5.7.3"
     },
     "peerDependencies": {
