--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,9 @@ jobs:
             - name: Install Dependencies
               run: pnpm install --no-frozen-lockfile
 
+            - name: Build
+              run: pnpm build
+
             - name: Create Release Pull Request
               id: changesets
               uses: changesets/action@v1
