--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,7 +2,6 @@
     "$schema": "https://unpkg.com/@changesets/config@3.0.5/schema.json",
     "changelog": ["@changesets/changelog-github", { "repo": "ethan-heo/vite-plugin-compile-sass-to-public" }],
     "commit": false,
-    "access": "restricted",
-    "baseBranch": "master",
-    "updateInternalDependencies": "patch"
+    "access": "public",
+    "baseBranch": "master"
 }
