fix: 사용할 파일을 위한 배포 설정을 수정한다

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         }
     },
     "files": [
-        "dist/index.js"
+        "dist/**"
     ],
     "scripts": {
         "build:es": "tsc --project tsconfig.json",
